# fmdisk

./: .gitignore  CMakeLists.txt  README.md
cmake/: Findfuse.cmake  Findjson-c.cmake  Findosxfuse.cmake
include/: common.h  fmdisk.h  log.h  net.h  utils.h
src/: .CMakeLists.txt.un~  .cache.cpp.un~  .check.cpp.un~  .dir.cpp.un~  .file.cpp.un~  .fuse.cpp.un~  .main.c.un~  .utils.cpp.un~  CMakeLists.txt  Makefile  block.cpp  block.h  cache.cpp  cache.h  check.cpp  common.h  defer.h  dir.cpp  dir.h  entry.cpp  entry.h  file.cpp  file.h  fm_main.c  fmcli.cpp  fsck.cpp  fuse.cpp  fuse.h  locker.h  locker_test.cpp  log.c  net.c  sqlite.cpp  sqlite.h  stub_api.cpp  stub_api.h  symlink.cpp  symlink.h  threadpool.cpp  threadpool.h  (+4 more)
tests/: CMakeLists.txt  README.md  fm_test.cpp  locker_test.cpp  mock_backend.cpp  mock_backend.h
tests/scripts/: 01_cached_flow.fmtest  02_no_cache.fmtest  03_rename_open_handle.fmtest  04_large_blocks.fmtest  05_private_key_nesting.fmtest  06_remount_consistency.fmtest  07_rename_not_supported.fmtest  08_overwrite_and_partial.fmtest  09_empty_entities.fmtest  10_delete_cleanup.fmtest  11_file_chmod_utime.fmtest  12_dir_lookup.fmtest  13_truncate_empty_blocks.fmtest  14_rename_overwrite.fmtest  15_rename_overwrite_native.fmtest  16_rename_overwrite_open_handles.fmtest  17_rename_journal_cancel.fmtest  18_rename_journal_recovery.fmtest  19_rename_journal_chunk_overwrite.fmtest  20_drop_cache_entries.fmtest  21_no_cache_chunk_read.fmtest  22_dir_rename_edge.fmtest  23_non_blocking_range_write.fmtest  24_truncate_range.fmtest  25_blocks_overwritten_stale_meta.fmtest
